change enum folder to common